# network-steam-deck-controller

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/client-win/: Cargo.toml
crates/client-win/src/: attach.rs  autostart.rs  dialogs.rs  driver.rs  installer.rs  main.rs  pair_dialog.rs  tray.rs  usbip_cli.rs  util.rs
crates/deck-protocol/: Cargo.toml
crates/deck-protocol/src/: auth.rs  buttons.rs  hid.rs  lib.rs  state.rs  wire.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: beacon.rs  crypto.rs  identity.rs  lib.rs  netifs.rs  packet.rs  pair.rs  state_dir.rs  time.rs  trust.rs
crates/discovery/tests/: pair_local.rs  stranger_beacon_during_active.rs
crates/kiosk-deck/: Cargo.toml
crates/kiosk-deck/src/: app.rs  control.rs  main.rs
crates/network-deck/: Cargo.toml
crates/network-deck/src/: app.rs  bind_error.rs  connection.rs  control.rs  daemon.rs  daemon_child.rs  firewall.rs  hotkey.rs  inhibit.rs  install.rs  main.rs  pair_worker.rs  steam_shortcut.rs  sysfs.rs
crates/server-deck/: Cargo.toml
crates/server-deck/scripts/: 70-steam-deck.rules  network-deck-server.service
crates/server-deck/src/: connection.rs  control.rs  main.rs  sysfs.rs
docs/superpowers/plans/: 2026-05-07-beacon.md  2026-05-07-usbip-backend-pivot.md  2026-05-08-deck-kiosk-ui.md  2026-05-09-pre-release-test-automation.md
docs/superpowers/specs/: 2026-05-07-beacon-design.md  2026-05-09-pre-release-test-plan.md
driver/: .gitignore  README.md
driver/NetworkDeckController/: NetworkDeckController.vcxproj  NetworkDeckController.vcxproj.filters
driver/inc/: public.h
driver/inf/: NetworkDeckController.inf
driver/scripts/: install.ps1  uninstall.ps1
driver/src/: common.h  driver.cpp  queue.cpp  usbdevice.cpp
scripts/: install-deck.sh  install-windows.ps1  network-deck-kiosk.desktop  network-deck.tmpfiles
tools/: README.md
