[package]
name = "client-win"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Windows side: tray app that shells out to usbip-win2 to attach the virtual Deck"

[dependencies]
discovery = { path = "../discovery" }
which = "7"
crossbeam-channel = "0.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
] }
tray-icon = "0.20"

[lints]
workspace = true
