[package]
name = "kiosk-deck"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Steam Deck side: touch-screen kiosk for pausing controller sharing"

[[bin]]
name = "network-deck-kiosk"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
