[package]
name = "server-deck"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Steam Deck side: read internal controller via hidraw, send canonical state"

[dependencies]
deck-protocol = { path = "../deck-protocol" }
discovery = { path = "../discovery" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
