[package]
name = "server-deck"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Steam Deck side: supervise usbip bind/unbind based on discovery beacon"

[dependencies]
discovery = { path = "../discovery" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
